--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
         <paper-scroll-header-panel drawer mode="seamed">
             <paper-toolbar class="medium-tall">
                 <div>
-                    <a href="#/settings">{{account.firstName}}</a>
+                    <a href="#/settings" style="display: block;">{{account.firstName}}</a>
                     {{account.email}}
                 </div>
             </paper-toolbar>
@@ -275,6 +275,8 @@
     <script src="scripts/components/entities/message/message.search.service.js"></script>
     <script src="bower_components/ngmap/build/scripts/ng-map.min.js"></script>
     <script src="https://maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDQyIIYTdUa-WHYbVqXNvjEO_DJsHBbaQ"
+            type="text/javascript"></script>-->
     <script src="scripts/app/main/login.controller.js"></script>
     <script src="bower_components/alv-ch-ng.text-truncate/dist/alv-ch-ng.textTruncate.js"></script>
     <!-- endbuild -->
