--- a/src/main/webapp/scripts/app/entities/favorite/favorites.html
+++ b/src/main/webapp/scripts/app/entities/favorite/favorites.html
@@ -89,11 +89,13 @@ class="hidden-xs"                        translate="project1App.favorite.home.cr
 
 <div class="container">
     <div class="row">
-        <h4>Tus espacios favoritos, {{account.firstName}}:
+        <h4>Tus espacios favoritos, {{account.firstName}}
+            </h4>
+        <h4>
         Favoritos: {{filtered.length}}</h4>
         <div class="col-sm-6 col-md-4"  ng-repeat="favorite in  filtered = (favorites | filter:filterExpr)">
             <div class="thumbnail material">
-                <a ui-sref="space.detail({id:spaceDTO.space.id})">
+                <a ui-sref="space.detail({id:favorite.space.id})">
                     <!--<img data-ng-src="{{'data:' + space.imgContentType + ';base64,' + space.img}}" style="height: 200px; min-width: 100%;" ng-if="space.img"/>-->
                     <img style="min-width: 100%;" src="http://placehold.it/350x150">
                 </a>
@@ -102,7 +104,7 @@ class="hidden-xs"                        translate="project1App.favorite.home.cr
                     <paper-fab ng-class="{true: 'fav2', false: 'fav'}[spaceDTO.liked == false]" icon="favorite-border" style="float: right; top: -30px; right: 18px; background-color: white;"></paper-fab>
                 </a>
 -->
-                <a ui-sref="space.detail({id:space.id})" class="decoration">
+                <a ui-sref="space.detail({id:space.id})" class="decoration" style="text-decoration: none">
                     <div class="caption">
                         <h3>{{favorite.space.name}}</h3>
                         <p style="color: rgba(0,0,0,0.54)">{{favorite.space.description}}</p>
