Space detail improvments

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -274,9 +274,8 @@
     <script src="scripts/components/entities/message/message.service.js"></script>
     <script src="scripts/components/entities/message/message.search.service.js"></script>
     <script src="bower_components/ngmap/build/scripts/ng-map.min.js"></script>
-    <script src="https://maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDQyIIYTdUa-WHYbVqXNvjEO_DJsHBbaQ"
-            type="text/javascript"></script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDQyIIYTdUa-WHYbVqXNvjEO_DJsHBbaQ"
+            type="text/javascript"></script>
     <script src="scripts/app/main/login.controller.js"></script>
     <script src="bower_components/alv-ch-ng.text-truncate/dist/alv-ch-ng.textTruncate.js"></script>
     <!-- endbuild -->
