--- a/src/main/webapp/scripts/app/entities/space/space-dialog.html
+++ b/src/main/webapp/scripts/app/entities/space/space-dialog.html
@@ -38,7 +38,7 @@
             address : {{vm.address}}
         </div>
 
-        <ng-map><marker position="{{vm.place.geometry.location}}"></marker></ng-map>
+        <ng-map id="foomap"><marker position="{{vm.place.geometry.location}}"></marker></ng-map>
 
         <div class="form-group">
             <label class="control-label" translate="project1App.space.price" for="field_price">Price</label>
@@ -55,19 +55,19 @@
         <div class="form-group">
             <label class="control-label" translate="project1App.space.streetAddress" for="field_streetAddress">StreetAddress</label>
             <input type="text" class="form-control" name="streetAddress" id="field_streetAddress"
-                    ng-model="space.streetAddress=vm.address"
+                    ng-model="space.streetAddress"
                      />
         </div>
         <div class="form-group">
             <label class="control-label" translate="project1App.space.lat" for="field_lat">Lat</label>
             <input type="number" class="form-control" name="lat" id="field_lat"
-                    ng-model="space.lat=lat"
+                    ng-model="space.lat"
                      />
         </div>
         <div class="form-group">
             <label class="control-label" translate="project1App.space.lng" for="field_lng">Lng</label>
             <input type="number" class="form-control" name="lng" id="field_lng"
-                    ng-model="space.lng=lng"
+                    ng-model="space.lng"
                      />
         </div>
 
